feat(ins): install some packages

--- a/configFiles/pacman.conf
+++ b/configFiles/pacman.conf
@@ -37,7 +37,7 @@ IgnorePkg   = fakeroot
 ##NoProgressBar
 ##CheckSpace
 ##VerbosePkgLists
-#ParallelDownloads = 5
+ParallelDownloads = 5
 
 ### org ###
 
